# python-ds-template

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .envrc  pyproject.toml
{{ cookiecutter.repo_name }}/.jupyter/: jupyter_lab_config.py
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab-contrib/spellchecker/: plugin.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/lsp-extension/: plugin.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: panel.jupyterlab-settings  tracker.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/notebooks/: notebook_template.ipynb
