[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_desc }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [ { include = "{{ cookiecutter.package_name }}" } ]

[tool.poetry.dependencies]
python = ">=3.11.1,<3.12"
fsspec = ">=2024.2.0"
ujson = ">=5.9.0"
dill = ">=0.3.8"
more-itertools = ">=10.2.0"
numpy = ">=1.26.4"
scipy = ">=1.12.0"
pandas = ">=2.2.0"
pyarrow = { extras = ["parquet"], version = ">=15.0.0" }
polars = { extras = [
  "fsspec",
  "numpy",
  "pandas",
  "pyarrow",
], version = ">=0.20.7" }
pydantic = ">=2.6.1"
scikit-learn = ">=1.4.0"
xgboost = ">=2.0.3"
catboost = ">=1.2.2"
lightgbm = ">=4.3.0"
hyperopt = ">=0.2.7"
linear-tree = ">=0.3.5"
statsmodels = ">=0.14.1"
mapie = ">=0.8.2"
optuna = ">=3.5.0"
sqlalchemy = ">=2.0.25"
duckdb-engine = ">=0.11.1"
async-lru = ">=2.0.4"
llvmlite = ">=0.42.0"
numba = ">=0.59.0"
bottleneck = ">=1.3.7"
dvc = { extras = ["s3", "ssh"], version = ">=3.43.1" }
shap = ">=0.44.1"
category-encoders = ">=2.6.3"
torch = [
  { version = ">=1.9.0,!=1.13.0+cpu,!=1.13.1+cpu,!=1.12.1,!=1.12.0,!=2.1.0+cpu", platform = "darwin", markers="platform_system == 'Darwin'" },
  { version = ">=2.2.0", source="torchcpu", platform = "linux", markers="platform_system == 'Linux'" }
]
cython = ">=3.0.8"
pythran = ">=0.15.0"
dvclive = ">=3.41.0"
imodels = {extras = ["corels", "cvxpy", "gosdt", "irf"], version = ">=1.4.1"}
fast-hdbscan = ">=0.1.3"
imbalanced-learn = ">=0.12.0"
featuretools = ">=1.28.0"
missingpy = ">=0.2.0"
dowhy = ">=0.11.1"
sympy = ">=1.12"
gcastle = ">=1.0.3"
causal-learn = ">=0.1.3.7"
transformers = ">=4.37.2"
catenets = ">=0.2.3"
jax = { extras = ["cpu"], version = ">=0.4.24" }
cvxopt = ">=1.3.2"
faiss-cpu = ">=1.7.4"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.8.0"
bandit = ">=1.7.7"
pylint = ">=3.0.3"
reorder-python-imports = ">=3.12.0"
flakehell = ">=0.9.0"
jedi-language-server = ">=0.41.2"
black = ">=24.1.1"
pipdeptree = ">=2.13.2"
mypy-extensions = ">=1.0.0"
pynvim = ">=0.5.0"
setuptools = ">=69.0.3"
wheel = ">=0.42.0"
pysnooper = ">=1.2.0"
icecream = ">=2.1.3"

[tool.poetry.group.notebook.dependencies]
jupyterlab = ">=4.1.0"
jupyterlab-vim = ">=4.1.0"
matplotlib = ">=3.8.2"
plotly = ">=5.18.0"
kaleido = ">=0.2.1,!=0.2.1.post1"
jupyterlab-code-formatter = ">=2.2.1"
seaborn = ">=0.13.2"
ipywidgets = ">=8.1.1"
sweetviz = ">=2.3.1"
jupyterlab-execute-time = ">=3.1.1"
nbdime = ">=4.0.1"
alibi = ">=0.9.5"
scikit-plot = ">=0.3.7"
nbconvert = {extras = ["webpdf"], version = ">=7.15.0"}
ydata-profiling = ">=4.6.4"
jupyterlab-git = ">=0.50.0"
jupyterlab-spellchecker = ">=0.8.4"
jupytext = ">=1.16.1"
jupyter-resource-usage = ">=1.0.1"
ipyflow = ">=0.0.197"
papermill = ">=2.5.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-xdist = ">=3.5.0"
hypothesis = ">=6.98.2"
pytest-asyncio = ">=0.23.4"

[tool.poetry.group.types.dependencies]
types-all = ">=1.0.0"
types-sqlalchemy = ">=1.4.53.38"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry_bumpversion.file."{{ cookiecutter.package_name }}/__init__.py"]

[tool.pylint]
jobs = 0
extension-pkg-allow-list = ["ujson", "pydantic"]

[tool.pylint.FORMAT]
max-line-length = 140

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "invalid-name",
  "too-few-public-methods",
  "import-outside-toplevel",
  "too-many-arguments",
]

[tool.black]
line-length = 140
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false # for strict mypy: (this is the tricky one :-))

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = "none"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportGeneralTypeIssues = "none"
reportUnusedExpression = "none"
reportConstantRedefinition = "none"
reportUntypedFunctionDecorator = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
